<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="LAPI_hello">Sample for LAPI</string>
    <string name="HAPI_hello">Sample for HAPI</string>
    <string name="app_name">HZFINGER SDK v1.302 for ANSI/ISO Standard</string>
    <string name="Put_your_finger">Put your finger</string>
    <string name="Retry_your_finger">Retry your finger</string>
    <string name="Takeoff_your_finger">Takeoff your finger</string>
    <string name="DBLinking">DBLinking </string>
    <string name="Insert_ID">Insert ID</string>
    <string name="Enroll_OK">Enroll OK</string>
    <string name="ERROR_NONE"></string>
    <string name="ERROR_ARGUMENTS">ERROR : Invalid argument(s)</string>
    <string name="ERROR_DOCANCELED">ERROR : Canceled</string>
    <string name="ERROR_TIMEOUT_OVER">ERROR : Timeover</string>
    <string name="ERROR_LOW_QUALITY">ERROR : The quality of finger is very low</string>
    <string name="ERROR_DUPLIED_FP">ERROR : This finger has been already enrolled</string>
    <string name="ERROR_NEG_ACCESS">ERROR : The fingerprint database can not be accessed</string>
    <string name="ERROR_NEG_FIND">ERROR : The fingerprint record can not be found</string>
    <string name="ERROR_NEG_DELETE">ERROR : The fingerprint record can not be deleted</string>
    <string name="ERROR_INITIALIZE">ERROR : The fingerprint engine is not initailized</string>
    <string name="ERROR_OVERFLOW_RECORD">ERROR : The record number is overflow</string>
    <string name="ERROR_DUPLIED_ID">ERROR : This ID has been already used</string>
    <string name="ERROR_NEG_ADDNEW">ERROR : The new fingerprint record can not be added</string>
    <string name="ERROR_NEG_CLEAR">ERROR:  : The fingerprint database can not be cleared</string>
    <string name="ERROR_NONE_FINGER">ERROR : The finger can not be detected on sensor</string>
    <string name="ERROR_NONE_CAPIMAGE">ERROR : The fingerprint image can not be captured from sensor</string>
    <string name="ERROR_NOT_CALIBRATED">ERROR : The fingerprint sensor is not calibrated</string>
    <string name="ERROR_NONE_DEVICE">ERROR : The device is not openned</string>
    <string name="ERROR_CANT_GENERATE">ERROR : Can not generate</string>
    <string name="ERROR_EMPTY_DADABASE">ERROR : Empty Database</string>
    <string name="ERROR_FAKE_FINGER">Warning : a fake fingerprint is detected</string>
    <string name="TEXT_CHECK_LIVE">CheckLive</string>
    <string name="TEXT_CHK_COMM">Comm Mode(USB/SPI)</string>
    <string name="TEXT_CHK_COLOR">Color Mode(Black/Red)</string>
    <string name="TEXT_OPEN_DEVICE">OpenDevice</string>
    <string name="TEXT_CLOSE_DEVICE">CloseDevice</string>
    <string name="TEXT_GET_IMAGE">GetImage</string>
    <string name="TEXT_VIDEO">Video</string>
    <string name="TEXT_CALIBRATION">Calibration</string>
    <string name="TEXT_GET_IMAGE_QUALITY">ImageQuality</string>
    <string name="TEXT_GET_NFI_QUALITY">NFIQuality</string>
    <string name="TEXT_CREATE_ANSI_TEMP">CreateANSITemplate</string>
    <string name="TEXT_CREATE_ISO_TEMP">CreateISOTemplate</string>
    <string name="TEXT_COMPARE_TEMP">CompareTemplate</string>
    <string name="TEXT_ANSI_CHAR">ANSI\nTemplate</string>
    <string name="TEXT_ISO_CHAR">ISO\nTemplate</string>
    <string name="TEXT_ID">ID</string>
    <string name="TEXT_LEVEL">SecLevel :</string>
    <string name="TEXT_RADIO_ANSI">ANSI</string>
    <string name="TEXT_RADIO_ISO">ISO</string>
    <string name="TEXT_ENROLL">Enroll</string>
    <string name="TEXT_VERIFY">Verify</string>
    <string name="TEXT_SEARCH">Search</string>
    <string name="TEXT_IMAGE">Image View</string>
    <string name="TEXT_DB_LOAD">DB.Files</string>
    <string name="TEXT_DB_REFRESH">DB.Show</string>
    <string name="TEXT_DB_CLEAR">DB.Clear</string>
    <string name="TEXT_DEL_RECORD">Delete Record</string>
    <string name="TEXT_MINUTIAE"/>
    <string name="TEXT_FPDELETE">Delete</string>
    <string name="TEXT_SETTING">Setting...</string>
    <string name="TEXT_STOP">Stop</string>
    <string name="TEXT_CANCELED">Canceled</string>
    <string name="TEXT_ON_SEARCHING">On searching...</string>
</resources>
