<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout001"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/LAPI_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="13sp"
            android:layout_weight="1"
            android:text="@string/LAPI_hello"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout002"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/chkCommMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_CHK_COMM"
            android:checked="true"
            android:textSize="13sp"/>

        <CheckBox
            android:id="@+id/chkColorMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/TEXT_CHK_COLOR"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout003"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/chkCheckLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="13sp"
            android:text="@string/TEXT_CHECK_LIVE"/>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_weight="0.15"
            android:text="@string/TEXT_LEVEL"/>

        <EditText
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_weight="0.15"
            android:ems="1"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout004"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <Button
            android:id="@+id/btnOpenDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:text="@string/TEXT_OPEN_DEVICE"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnCloseDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_CLOSE_DEVICE"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnGetImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_GET_IMAGE"
            android:textSize="11sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout005"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_VIDEO"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnGetImageQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_GET_IMAGE_QUALITY"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnGetNFIQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_GET_NFI_QUALITY"
            android:textSize="11sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout006"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCreateANSITemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_CREATE_ANSI_TEMP"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnCreateISOTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_CREATE_ISO_TEMP"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnCompareTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_COMPARE_TEMP"
            android:textSize="11sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout007"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvANSITemp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="#ffdddddd"
            android:singleLine="false"
            android:layout_marginLeft="5dp"
            android:textSize="11sp"
            android:text="@string/TEXT_ANSI_CHAR"
            android:textColor="#ff000000"/>

        <TextView
            android:id="@+id/tvISOTemp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="#ffdddddd"
            android:singleLine="false"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="11sp"
            android:text="@string/TEXT_ISO_CHAR"
            android:textColor="#ff000000"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout008"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageFinger"
            android:layout_width="128dp"
            android:layout_height="180dp"
            android:background="@android:drawable/screen_background_light"
            android:baseline="1dp"
            android:contentDescription="@string/TEXT_IMAGE"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout009"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/HAPI_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="13sp"
            android:text="@string/HAPI_hello"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout010"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textSize="11sp"
            android:layout_weight="0.15"
            android:text="@string/TEXT_ID"/>

        <EditText
            android:id="@+id/idText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout011"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdoANSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:checked="false"
                android:text="@string/TEXT_RADIO_ANSI"
                android:textSize="11sp"/>

            <RadioButton
                android:id="@+id/rdoISO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/TEXT_RADIO_ISO"
                android:textSize="11sp"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout012"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEnroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_ENROLL"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_VERIFY"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_SEARCH"
            android:textSize="11sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout013"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnDBRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_DB_REFRESH"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnDBClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_DB_CLEAR"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/btnRCDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TEXT_DEL_RECORD"
            android:textSize="11sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout014"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <ListView
            android:id="@+id/idListView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_weight="1"
            android:contentDescription="@string/DBLinking"
            android:tag="@string/DBLinking"
            android:visibility="visible"
            android:drawSelectorOnTop="true">

        </ListView>

    </LinearLayout>

</LinearLayout>
